added twitter config v1

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ logo: 'assets/images/icon.png'
 favicon: 'assets/images/icon.png'
 include: ["_pages"]
 permalink: /:title/
+twitter_username: duckworth_tj
 
 # Authors
 authors:
